--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://img.freepik.com/free-vector/open-book-icon_24877-82146.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Book Vault - Redux</title>
     <link
